@@ -1,5 +1,12 @@
 2013-06-08  Christopher Faylor  <me.cygwin2013@cgf.cx>
 
+	* exceptions.cc (try_to_debug): Don't use yield() when waiting for
+	another process.
+	(sigpacket::setup_handler): Fix long-standing problem where loop could
+	exit with lock held.
+
+2013-06-08  Christopher Faylor  <me.cygwin2013@cgf.cx>
+
 	* miscfuncs.cc (yield): Revert (after researching) to calling SleepEx
 	with 0.  We don't want to actually sleep when calling this function.
 
